--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3830,6 +3830,9 @@
     <ClCompile Include="UVa\100\110.cpp">
       <Filter>UVa\100\110</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10001.cpp">
+      <Filter>UVa\10000\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
