--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3833,6 +3833,9 @@
     <ClCompile Include="UVa\10000\10001.cpp">
       <Filter>UVa\10000\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12300\12342.cpp">
+      <Filter>UVa\12300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
