--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3836,6 +3836,9 @@
     <ClCompile Include="UVa\12300\12342.cpp">
       <Filter>UVa\12300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11300\11384.cpp">
+      <Filter>UVa\11300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
