--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3839,6 +3839,9 @@
     <ClCompile Include="UVa\11300\11384.cpp">
       <Filter>UVa\11300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11700\11790.cpp">
+      <Filter>UVa\11700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
