--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3842,6 +3842,9 @@
     <ClCompile Include="UVa\11700\11790.cpp">
       <Filter>UVa\11700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\500\537.cpp">
+      <Filter>UVa\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
