--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -579,6 +579,18 @@
     <Filter Include="Archive\3200">
       <UniqueIdentifier>{cc7f9f86-ddcb-43a4-ac9e-eec817d1760f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Archive\3300">
+      <UniqueIdentifier>{707ecc43-d55a-4ab1-9f8e-6522022e4ac2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archive\3900">
+      <UniqueIdentifier>{6f1f0e85-7aef-49aa-b7eb-d049e1bcd24e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archive\3700">
+      <UniqueIdentifier>{f3595ee3-78e9-4443-8bed-939fac4ac2b4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archive\4700">
+      <UniqueIdentifier>{e389fd8f-698c-43ae-98af-0e58d26cf086}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source.cpp">
@@ -3868,6 +3880,24 @@
     </ClCompile>
     <ClCompile Include="UVa\1500\1594.cpp">
       <Filter>UVa\1500</Filter>
+    </ClCompile>
+    <ClCompile Include="Archive\3300\3355.cpp">
+      <Filter>Archive\3300</Filter>
+    </ClCompile>
+    <ClCompile Include="Archive\3300\3354.cpp">
+      <Filter>Archive\3300</Filter>
+    </ClCompile>
+    <ClCompile Include="Archive\3900\3900.cpp">
+      <Filter>Archive\3900</Filter>
+    </ClCompile>
+    <ClCompile Include="Archive\3200\3214.cpp">
+      <Filter>Archive\3200</Filter>
+    </ClCompile>
+    <ClCompile Include="Archive\3700\3712.cpp">
+      <Filter>Archive\3700</Filter>
+    </ClCompile>
+    <ClCompile Include="Archive\4700\4723.cpp">
+      <Filter>Archive\4700</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
