--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3914,6 +3914,9 @@
     <ClCompile Include="UVa\11000\11005.cpp">
       <Filter>UVa\11000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11000\11055.cpp">
+      <Filter>UVa\11000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
