--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3917,6 +3917,9 @@
     <ClCompile Include="UVa\11000\11055.cpp">
       <Filter>UVa\11000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11300\11396.cpp">
+      <Filter>UVa\11300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
