--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3926,6 +3926,9 @@
     <ClCompile Include="UVa\11100\11110.cpp">
       <Filter>UVa\11100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12500\12592.cpp">
+      <Filter>UVa\12500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
