--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3929,6 +3929,9 @@
     <ClCompile Include="UVa\12500\12592.cpp">
       <Filter>UVa\12500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\13000\13012.cpp">
+      <Filter>UVa\13000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
