--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3932,6 +3932,9 @@
     <ClCompile Include="UVa\13000\13012.cpp">
       <Filter>UVa\13000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\13000\13055.cpp">
+      <Filter>UVa\13000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
