--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3935,6 +3935,9 @@
     <ClCompile Include="UVa\13000\13055.cpp">
       <Filter>UVa\13000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12100\12160.cpp">
+      <Filter>UVa\12100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
