--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3941,6 +3941,9 @@
     <ClCompile Include="UVa\1300\1339.cpp">
       <Filter>UVa\1300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\1300\1368.cpp">
+      <Filter>UVa\1300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
