--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3944,6 +3944,9 @@
     <ClCompile Include="UVa\1300\1368.cpp">
       <Filter>UVa\1300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\1300\1347.cpp">
+      <Filter>UVa\1300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
