--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3950,6 +3950,12 @@
     <ClCompile Include="UVa\1300\1394.cpp">
       <Filter>UVa\1300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\300\389.cpp">
+      <Filter>UVa\300</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\300\392.cpp">
+      <Filter>UVa\300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
