--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3956,6 +3956,9 @@
     <ClCompile Include="UVa\300\392.cpp">
       <Filter>UVa\300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\409.cpp">
+      <Filter>UVa\400\400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
